--- a/templates/base.html
+++ b/templates/base.html
@@ -5,11 +5,11 @@
     <title>Little Bits of Good</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style type="text/css">body {padding-top: 40px;}</style>
-    <link href="/static/global/bootstrap/css/bootstrap.css" rel="stylesheet" />
-    <link href="{% static "global/bootstrap/css/bootstrap-res-nav.min.css" %}" rel="stylesheet" />
-    <link href="{% static "global/bootstrap/css/bootstrap-fileupload.min.css" %}" rel="stylesheet" />
-    <link href="{% static "global/css/top.css" %}" rel="stylesheet" >
-    <link href="{% static "global/css/styles.css" %}" rel="stylesheet" >
+    <link href="{% static "global/bootstrap/css/bootstrap.css" %}"                  rel="stylesheet" />
+    <link href="{% static "global/bootstrap/css/bootstrap-res-nav.min.css" %}"      rel="stylesheet" />
+    <link href="{% static "global/bootstrap/css/bootstrap-fileupload.min.css" %}"   rel="stylesheet" />
+    <link href="{% static "global/css/top.css" %}"                                  rel="stylesheet" />
+    <link href="{% static "global/css/styles.css" %}"                               rel="stylesheet" />
     <!-- <link href="{% static "global/assets/bootstrap/css/bootstrap-responsive.css" %}" rel="stylesheet"> -->
     <!-- <link href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" rel="stylesheet"> -->
 
@@ -18,6 +18,7 @@
 
 </head>
 <body>
+    <!-- creates the like-button -->
     <div class="navbar navbar-inverse navbar-fixed-top" id="navbar-top">
         <div class="navbar-inner">
             <div class="container" id="navbar-container">
@@ -39,9 +40,6 @@
                             <a href="../Dropbox/seeking-help.php">I'm Looking for Volunteers</a>
                         </li>
                         <li class="">
-                            <a href="../Dropbox/dev_account.php">My Account</a>
-                        </li>
-                        <li class="">
                             <a href="#" id="login-navbar">Login</a>
                         </li>
                         <li class="">
@@ -50,7 +48,13 @@
                     </ul>
                 </div>
                 <div id="reg-login">
-                    <a href="/account/login/">Login</a> / <a href="/account/register/">Join</a> 
+                    {{ user }}
+                    {% if user.is_authenticated %}
+                    {# {{ user }} #}
+                    <a href="{% url "my-account" pk=user.id %}">My Account</a> / <a href="{% url "logout" %}">Logout</a> 
+                    {% else %}
+                    <a href="{% url "login" %}">Login</a> / <a href="{% url "register" %}">Join</a> 
+                    {% endif %}
                 </div>
             </div>
         </div>
@@ -65,25 +69,36 @@
         </div>
     </div>
 
-    <div id="footer-wrapper">   
+    <div id="footer-wrapper">
         <div class="container footer" id="my-footer">
             <a href="#">Back to Top</a> <b>|</b> 
             <a href="../Dropbox/about.php">About Us</a> <b>|</b> 
             <a href="../Dropbox/support.php">Support Us</a> <b>|</b> 
             <a href="../Dropbox/contact.php">Feedback / Tell us Your Story</a> <b>|</b> 
-            <a href="">Privacy and Cookies</a>
-        </div>
+            <a href="">Privacy and Cookies</a><br>
+            <a href="#" 
+            onclick="
+            window.open(
+            'https://www.facebook.com/sharer/sharer.php?u='+encodeURIComponent(location.href), 
+            'facebook-share-dialog', 
+            'width=626,height=436'); 
+            return false;">
+            Share on Facebook
+        </a>
     </div>
+</div>
 
 
-    {# <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script> #}
-    {# <script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.9/jquery.validate.min.js"></script> #}
-    <script src="{% static "global/bootstrap/js/bootstrap.min.js" %}"></script>
-    <script src="{% static "bootstrap-fileupload.min.js" %}"></script>
-    <script src="{% static "global/js/fx.js" %}"></script>
-    <script src="{% static "global/js/jquery-1.10.2.min.js" %}"></script>
-    <script src="{% static "global/chosen/public/chosen.jquery.js" %}"></script>
-    {% block extrascripts %}
-    {% endblock %}
+{# <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script> #}
+{# <script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.9/jquery.validate.min.js"></script> #}
+<script src="{% static "global/bootstrap/js/bootstrap.min.js" %}"></script>
+<script src="{% static "bootstrap-fileupload.min.js" %}"></script>
+<script src="{% static "global/js/fx.js" %}"></script>
+<script src="{% static "global/js/jquery-1.10.2.min.js" %}"></script>
+<script src="{% static "global/chosen/public/chosen.jquery.js" %}"></script>
+<script type="text/javascript" src="{% static 'django_js_utils.js' %}"></script>
+<!-- {# <script src="{% url 'js_reverse' %}" type="text/javascript"></script> #} -->
+{% block extrascripts %}
+{% endblock %}
 </body>
 </html>
