projects midway through

--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,7 @@
                             <a href="../Dropbox/volunteers.php">For Volunteers</a>
                         </li>
                         <li class="">
-                            <a href="../Dropbox/seeking-help.php">I'm Looking for Volunteers</a>
+                            <a href="{% url 'looking-for-volunteers' %}">I'm Looking for Volunteers</a>
                         </li>
                         <li class="">
                             <a href="#" id="login-navbar">Login</a>
