--- a/users/templates/register.html
+++ b/users/templates/register.html
@@ -10,7 +10,8 @@
 {% block content %}
 
 <div class="area">
-	<form id="profile-form" class="form-horizontal" method="post" action="" enctype="multipart/form-data"> {% csrf_token %}
+	<form id="profile-form" class="form-horizontal" method="post" action="" enctype="multipart/form-data"> 
+		{% csrf_token %}
 		<fieldset>
 			{% if form.errors %}
 			<div class="controls">
@@ -29,6 +30,6 @@
 {% endblock content %}
 
 {% block extrascripts %}
-<script src="{% static "users/js/yqlgeo-2.js" %}"></script>       
 <script src="{% static "users/js/userfx.js" %}"></script>       
+<script src="{% static "users/js/coordinates.js" %}"></script>       
 {% endblock extrascripts %}
