--- a/projects/templates/wrong_user.html
+++ b/projects/templates/wrong_user.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<p>Something went wrong. The project you're trying to access belongs to another user</p>
+<p>{{ error_message }}</p>
 <p>Click <a href="{% url "login" %}">here</a> to log in as a different user</p>
 {% endblock content %}
