--- a/globalstatic/css/styles.css
+++ b/globalstatic/css/styles.css
@@ -1,14 +1,35 @@
+body {
+	background-color: #E6E6E6;
+}
+
+#box-hide {
+	position: absolute;
+	background-color: white;
+	min-height: 10px;
+	top: 130;
+	z-index: 3;
+}
+
+#box-hide-bottom {
+	position: absolute;
+	background-color: white;
+	min-height: 10px;
+	bottom: 40;
+	z-index: 3;
+}
 
 #my-wrapper > #body-wrapper {
-  	padding: -10px 10px -10px 10px;
+  	/*padding: -10px 10px -10px 10px;*/
   	box-shadow: 0 0 10px black;
-  	margin-bottom: 10px
+  	margin-bottom: 10px;
+  	background-color: #FFFFFF;
+  	z-index: 4;
 }
 
 #my-wrapper, #my-wrapper > #body-wrapper {
-	min-height: -webkit-calc(100% - 40px);
-    min-height: -moz-calc(100% - 40px);
-	min-height: calc(100% - 40px);
+	min-height: -webkit-calc(100% - 180px);
+    min-height: -moz-calc(100% - 180px);
+	min-height: calc(100% - 180px);
 	
 }
 
@@ -16,10 +37,8 @@
 	margin: 0px 0px 0px 0px;
 	padding-top: 0px;
 	overflow: hidden;
-}
-
-#my-wrapper {
-	
+	position: relative;
+  	z-index: 4;
 }
 
 #main {
@@ -46,12 +65,12 @@
 	float: none;
 }
 
-.footer {
-	height: 40px;
-}
-
 #my-footer { 
   	text-align: right;
+  	background-color: #FFFFFF;
+	height: 40px;
+	padding-right: 20px;
+  	box-sizing: border-box;
 }
 
 #open-projects-header {
@@ -61,3 +80,18 @@
 #more-projects {
 	text-align: center;
 }	
+
+.hidden {
+	display: none;
+}
+
+.my-thumbnail-image {
+    position: absolute;
+    margin: auto;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    max-width: 100%;
+    max-height: 100%;
+}
