--- a/globalstatic/css/top.css
+++ b/globalstatic/css/top.css
@@ -1,55 +1,48 @@
-#navbar-container {
+header {
+  background-image: url('/static/global/images/header-bg.png');
+  background-repeat: horizontal;
+}
+
+#header-wrapper {
   padding: -10px 10px -10px 10px;
-  box-shadow: 0 0 10px black;
+  box-shadow: 0px 0px 10px black;
+  position: relative;
 }
 
-.navbar-inverse .navbar-inner {
-  color: white;
-  text-align: center;
-  text-shadow: 0 1px 3px rgba(0,0,0,.4), 0 0 30px rgba(0,0,0,.075);
-  background-color: white; 
-  background-image: linear-gradient(45deg,  #00170B 0%,#006B32 100%);
-  /*background: -moz-linear-gradient(45deg,  #00170B 0%, #006B32 100%);
-  background: -webkit-gradient(linear, left bottom, right top, color-stop(0%,#E0FFEF), color-stop(100%,#006B32));
-  background: -webkit-linear-gradient(45deg,  #00170B 0%,#006B32 100%);
-  background: -o-linear-gradient(45deg,  #00170B 0%,#006B32 100%);
-  background: -ms-linear-gradient(45deg,  #00170B 0%,#006B32 100%);
-  background: linear-gradient(45deg,  #00170B 0%,#006B32 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#E0FFEF', endColorstr='#006B32',GradientType=1 );*/
-  /*-webkit-box-shadow: inset 0 3px 7px rgba(0,0,0,.2), inset 0 -3px 7px rgba(0,0,0,.2);*/
-  /*-moz-box-shadow: inset 0 3px 7px rgba(0,0,0,.2), inset 0 -3px 7px rgba(0,0,0,.2);*/
-  /*box-shadow: inset 0 3px 7px rgba(0,0,0,.2), inset 0 -3px 7px rgba(0,0,0,.2);*/
-  overflow: hidden;
+#logo {
+  position: relative;
+  min-height: 90px;
 }
 
-.navbar-inner > .container > .brand {
-	margin-left: 0px;
-	padding-left: 5px;
+#lbog_logo {
+  position: absolute;
+  top: 20px;
+  margin-left: 20px; 
 }
 
-.container > div > .nav > .active > a,
-.container > div > .nav > .active > a:hover {
-  background: rgba(33, 51, 32, 0.5);
-  color: white;
+#navbg-top {
+  margin-left: 0px;
+  /*background-color: #333333;*/
 }
 
-#reg-login {
-	float:right;
+#fb-buttons, #reg-login{
   box-sizing: border-box;
   padding-top: 10px;
-	padding-right: 10px;
-	margin-right: 10px;
+  color: white;
+  text-align: right;
 }
 
-@media (min-width: 980px) {
-	#login-navbar, #register-navbar {
-		display: none;
-	}
+/*#fb-buttons {
+  max-width: 300px;
+}*/
+
+#reg-login{
+  margin-left: -20px;
 }
 
 @media (max-width: 980px) {
-	#reg-login {
-		display: none;
-	}
+  #reg-login {
+    display: none;
+  }
 }
 
