--- a/projects/templates/looking_for_volunteers.html
+++ b/projects/templates/looking_for_volunteers.html
@@ -3,12 +3,13 @@
 
 {% block extrahead %}
 <link href="{% static "global/chosen/public/chosen.css" %}" 		rel="stylesheet">
-<link href="{% static "global/chosen/public/chosen.jquery.css" %}" 	rel="stylesheet">
 <link href="{% static "users/css/forms.css" %}"                     rel="stylesheet">
+<script src="{% static "global/chosen/public/chosen.jquery.js" %}"></script>
+<script src="{% static "projects/js/volunteers.js" %}"></script> 
 {% endblock extrahead %}
 
 {% block content %}
-<form id="profile-form" class="form-horizontal" method="post" action="" enctype="multipart/form-data"> 
+<form id="project-form" class="form-horizontal" method="post" action="" enctype="multipart/form-data"> 
 	{% csrf_token %}
 	<fieldset>
 		{% if form.errors %}
@@ -27,17 +28,19 @@
             {% endif %}
             >
 		</div>
+		<p id="p_country" class="hidden">{{ user.get_profile.country }}</p>
+		<p id="p_state" class="hidden">{{ user.get_profile.state }}</p>
+		<p id="p_city" class="hidden">{{ user.get_profile.city }}</p>
+
 		<input type='submit' value="Hidden Submit" style="display: none;">
 	</fieldset> 
 </form>
 </div>
 {# <div id='charity-data-url' rel="{% url 'charity-data' %}"></div> #}
 
-
-<p>get user location</p>
 {% endblock content %}
 
 {% block extrascripts %}
-<script src="{% static "projects/js/volunteers.js" %}"></script> 
-<script src="{% static "users/js/coordinates.js" %}"></script>             
+<script src="{% static "projects/js/chosen-activate.js" %}"></script>
+<script src="{% static "users/js/coordinates.js" %}"></script> 
 {% endblock extrascripts %}
