--- a/users/templates/change-details.html
+++ b/users/templates/change-details.html
@@ -3,8 +3,8 @@
 
 {% block extrahead %}
 <link href="{% static "global/chosen/public/chosen.css" %}"         rel="stylesheet">
-<link href="{% static "global/chosen/public/chosen.jquery.css" %}"  rel="stylesheet">
 <link href="{% static "users/css/forms.css" %}"                     rel="stylesheet">
+<script src="{% static "global/chosen/public/chosen.jquery.js" %}"></script>
 {% endblock extrahead %}
 
 {% block content %}
@@ -31,6 +31,7 @@
 {% endblock content %}
 
 {% block extrascripts %}
+<script src="{% static "projects/js/chosen-activate.js" %}"></script>
 <script src="{% static "users/js/userfx.js" %}"></script>  
 <script src="{% static "users/js/coordinates.js" %}"></script>            
 {% endblock extrascripts %}
