--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -8,6 +8,7 @@
                 <img src="{% static "global/images/lbog_logo.png" %}" alt="LBOG logo" id='lbog_logo'>
             </div>
             <div class="span3 offset3" id="fb-buttons">
+                <a href="{% url 'fbtest' %}">Fb test</a>
                 <button class="btn btn-primary">FB Like</button>
                 <button class="btn btn-primary">FB Share</button>
             </div>
