--- a/templates/fbtest.html
+++ b/templates/fbtest.html
@@ -10,14 +10,14 @@ div { padding: 10px; }
 <div id="fb-root"></div>
 <script type="text/javascript">
   // You probably don't want to use globals, but this is just example code
-  var fbAppId = 'replace me';
+  var fbAppId = '146917808837052';
   var objectToLike = 'http://techcrunch.com/2013/02/06/facebook-launches-developers-live-video-channel-to-keep-its-developer-ecosystem-up-to-date/';
 
   // This check is just here to make sure you set your app ID. You don't
   // need to use it in production. 
-  if (fbAppId === 'replace me') {
-    alert('Please set the fbAppId in the sample.');
-  }
+  // if (fbAppId === '146917808837052') {
+  //   alert('Please set the fbAppId in the sample.');
+  // }
 
   // This is boilerplate code that is used to initialize the Facebook
   // JS SDK.  You would normally set your App ID in this code.
