--- a/templates/registration/password_change_done.html
+++ b/templates/registration/password_change_done.html
@@ -1,12 +1,6 @@
-{% extends 'base.html' %}
-{% load staticfiles %}
+{% extends 'base_redirect.html' %}
 
-{% block content %}
+{% block redirect_content %}
 <p>Password changed... redirecting back to account</p>
 <div id="redirect-url" rel="{% url "my-account" pk=user.id %}" ></div>
-{% endblock content %}
-
-{% block extrascripts %}
-<script src="{% static "users/js/delay-redirect.js" %}"></script>
-<script src="{% static "global/js/jquery.timer.js" %}"></script>
-{% endblock extrascripts %}
+{% endblock redirect_content %}
