--- a/templates/registration/password_reset_done.html
+++ b/templates/registration/password_reset_done.html
@@ -1,9 +1,8 @@
-{% extends "base.html" %}
+{% extends "base_main_forms.html" %}
 
-{% block content %}
+{% block main_forms_content %}
     
-<h2>Password reset successful</h2>
+	<h4>Password reset successful</h4>
+	<p>We've emailed you instructions for setting your password to the email address you submitted. You should be receiving it shortly.</p>
 
-<p>We've emailed you instructions for setting your password to the email address you submitted. You should be receiving it shortly.</p>
-
-{% endblock content %}
+{% endblock main_forms_content %}
