--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -1,24 +1,21 @@
-{% extends "base.html" %}
+{% extends "base_main_forms.html" %}
 
 
-{% block content %}
+{% block main_forms_content %}
+    <p>"Forgotten your password? Enter your email address below, and we'll email instructions for setting a new one."</p>
 
-
-<p>"Forgotten your password? Enter your email address below, and we'll email instructions for setting a new one."</p>
-
-<form class="form-horizontal" action="" method="post">{% csrf_token %}
-    <fieldset>
-        {{ form.email.errors }}
-        <div class="control-group">
-            <label class="control-label" for="id_email">Email address:</label> 
-            <div class="controls">
-                {{ form.email }} 
+    <form class="form-horizontal" action="" method="post">{% csrf_token %}
+        <fieldset>
+            {{ form.email.errors }}
+            <div class="control-group">
+                <label class="control-label" for="id_email">Email address:</label> 
+                <div class="controls">
+                    {{ form.email }} 
+                </div>
             </div>
-        </div>
-        <div class="controls">
-            <input class="btn btn-success" type="submit" value="Reset my password" />
-        </div>
-    </fieldset>
-</form>
-
-{% endblock content %}
+            <div class="controls">
+                <input class="btn btn-success" type="submit" value="Reset my password" />
+            </div>
+        </fieldset>
+    </form>
+{% endblock main_forms_content %}
