--- a/globalstatic/css/styles.css
+++ b/globalstatic/css/styles.css
@@ -2,6 +2,10 @@ body {
 	background-color: #E6E6E6;
 }
 
+.hidden {
+  display: none;
+}
+
 #box-hide {
 	position: absolute;
 	background-color: white;
@@ -10,11 +14,15 @@ body {
 	z-index: 3;
 }
 
+#box-hide-bottom-wrapper {
+	position: relative;
+}
+
 #box-hide-bottom {
 	position: absolute;
 	background-color: white;
 	min-height: 10px;
-	bottom: 40;
+	top: -10;
 	z-index: 3;
 }
 
