--- a/templates/base_head.html
+++ b/templates/base_head.html
@@ -3,17 +3,19 @@
 <title>Little Bits of Good</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style type="text/css"></style>
-<link href="{% static "global/bootstrap/css/bootstrap.min.css" %}"                  rel="stylesheet" />
-<link href="{% static "global/bootstrap/css/bootstrap-res-nav.min.css" %}"      rel="stylesheet" />
-<link href="{% static "global/css/styles.css" %}"                               rel="stylesheet" />
+<link href="{% static "global/bootstrap/css/bootstrap.min.css" %}"          rel="stylesheet" />
+<link href="{% static "global/bootstrap/css/bootstrap-res-nav.min.css" %}"  rel="stylesheet" />
+<link href="{% static "global/chosen/public/chosen.min.css" %}"     		rel="stylesheet">
+<link href="{% static "global/css/styles.css" %}"                           rel="stylesheet" />
+<link href="{% static "global/css/form_styles.css" %}"                      rel="stylesheet" />
+<link href="{% static "global/css/search_results.css" %}"                      rel="stylesheet" />
+<link href="{% static "global/css/solo_content.css" %}" 						rel="stylesheet">
 <!-- header styles -->
-<link href="{% static "global/css/top.css" %}"  rel="stylesheet" />
-<link href="{% static "global/css/navbar.css" %}"  rel="stylesheet" />
-
+<link href="{% static "global/css/top.css" %}"  							rel="stylesheet" />
+<link href="{% static "global/css/navbar.css" %}"  							rel="stylesheet" />
 <!-- js files -->
-<script src="{% static "global/js/jquery-1.10.2.min.js" %}"></script>
-
-<script src="{% static "global/bootstrap/js/bootstrap.min.js" %}"></script>
+<script src="{% static "global/js/jquery-1.10.2.min.js" %}" 		type="text/javascript"></script>
+<script src="{% static "global/bootstrap/js/bootstrap.min.js" %}"	type="text/javascript"></script>
 
 {# <link href="{% static "global/bootstrap/css/bootstrap-fileupload.min.css" %}"   rel="stylesheet" /> #}
 {# <script src="{% static "bootstrap-fileupload.min.js" %}"></script> #}
