--- a/templates/index.html
+++ b/templates/index.html
@@ -1,25 +1,19 @@
 {% extends "base.html" %}
 {% load staticfiles %}
 
-{% block extrahead %}
+{% block extrahead_level1 %}
 	<link href="{% static "global/css/front_page.css" %}"  rel="stylesheet" />
-{% endblock extrahead %}
+{% endblock extrahead_level1 %}
 
 {% block content %}
-<div class="row">
-	<div class="span8" id="front-page-main">
-	{% include 'carousel.html' %}	
-	{% include 'thumbs.html' %}
-	</div>
+	<div class="row">
+		<div class="span8" id="front-page-main">
+		{% include 'carousel.html' %}	
+		{% include 'thumbs.html' %}
+		</div>
 
-	<div class="span4" id="front_page_stories">
-		{% include 'stories.html' %}
+		<div class="span4" id="front_page_stories">
+			{% include 'stories.html' %}
+		</div>
 	</div>
-</div>
-
 {% endblock content %}
-
-{% block right_sidebar %}
-	
-
-{% endblock right_sidebar %}
