--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -1,26 +1,20 @@
-{% extends "base.html" %}
+{% extends "base_accounts.html" %}
 
-{% block content %}
-{% include 'accounts-header.html' %}
+{% block accounts_content %}
 
 <form class="form-horizontal" action="" method="post">{% csrf_token %}
     <div>
-        set errors properly for all old and new forms
         {% if form.errors %}
         <div class="errors">
             Please correct the error below.
         </div>
         {% endif %}
-
-        <h1>Password change</h1>
-
         <p>Please enter your old password, for security's sake, and then enter your new password twice so we can verify you typed it in correctly.</p>
-
         <fieldset>
 
             <div class="control-group">
                 {{ form.old_password.errors }}
-                <label for="id_old_password" class="control-label">Old password:</label>
+                <label for="id_old_password" class="control-label"><span class="mandatory">*</span> Old password:</label>
                 <div class="controls">
                     {{ form.old_password }}
                 </div>
@@ -28,7 +22,7 @@
 
             <div class="control-group">
                 {{ form.new_password1.errors }}
-                <label for="id_new_password1" class="control-label">New password:</label>
+                <label for="id_new_password1" class="control-label"><span class="mandatory">*</span> New password:</label>
                 <div class="controls">
                     {{ form.new_password1 }}   
                 </div>
@@ -36,12 +30,11 @@
 
             <div class="control-group">
                 {{ form.new_password2.errors }}
-                <label for="id_new_password2" class="control-label">Password (again):</label>
+                <label for="id_new_password2" class="control-label"><span class="mandatory">*</span> Password (again):</label>
                 <div class="controls">
                     {{ form.new_password2 }}
                 </div>
             </div>
-
         </fieldset>
 
         <div class="controls">
@@ -52,4 +45,4 @@
     </div>
 </form></div>
 
-{% endblock content %}
+{% endblock accounts_content %}
