--- a/users/templates/login.html
+++ b/users/templates/login.html
@@ -1,38 +1,35 @@
-{% extends 'base.html' %}
+{% extends 'base_main_forms.html' %}
 
-{% block content %}
+{% block main_forms_content %}
+    {% if form.errors %}
+        <p>Your username and password didn't match, please try again.</p>
+    {% endif %}
 
-{% if form.errors %}
-<p>Your username and password didn't match, please try again.</p>
-{% endif %}
-
-<div class="area">
-    <form class="form-horizontal" method="post" action=""> {% csrf_token %}
-      <fieldset>
-          <div class="control-group">
-            <label class="control-label" for="id_username">Username:</label>
-            <div class="controls">
-                {{ form.username }}
+    <div class="area">
+        <form class="form-horizontal" method="post" action=""> {% csrf_token %}
+          <fieldset>
+              <div class="control-group">
+                <label class="control-label" for="id_username">Username:</label>
+                <div class="controls">
+                    {{ form.username }}
+                </div>
             </div>
-        </div>
-        <div class="control-group">
-            <label class="control-label" for="id_password">Password:</label>
-            <div class="controls">
-                {{ form.password }}
+            <div class="control-group">
+                <label class="control-label" for="id_password">Password:</label>
+                <div class="controls">
+                    {{ form.password }}
+                </div>
             </div>
-        </div>
-        <div class="controls">
-            <input type="submit" class="btn btn-success" value="login" />
-        </div>
-        <div class="controls">
-            <br>
+            <div class="controls">
+                <input type="submit" class="btn btn-success" value="login" />
+            </div>
+            <div class="controls">
+                <br>
 
-            <a href="{% url "password_reset" %}">Forgot password?</a><br>
-            <a href="{% url "register" %}">Not yet registered?</a>
-        </div>
-    </fieldset>
-</form>
-
-
-</div>
-{% endblock content %}
+                <a href="{% url "password_reset" %}">Forgot password?</a><br>
+                <a href="{% url "register" %}">Not yet registered?</a>
+            </div>
+        </fieldset>
+    </form>
+    </div>
+{% endblock main_forms_content %}
