--- a/users/templates/registration_done.html
+++ b/users/templates/registration_done.html
@@ -1,12 +1,6 @@
-{% extends 'base.html' %}
-{% load staticfiles %}
+{% extends 'base_redirect.html' %}
 
-{% block content %}
+{% block redirect_content %}
 <p>Profile created... Redirecting to login</p>
 <div id="redirect-url" rel="{% url "login" %}" ></div>
-{% endblock content %}
-
-{% block extrascripts %}
-<script src="{% static "users/js/delay-redirect.js" %}"></script>
-<script src="{% static "global/js/jquery.timer.js" %}"></script>
-{% endblock extrascripts %}
+{% endblock redirect_content %}
